syntax = "proto3";
package training;

message CommonResponse{
  bool success = 1; //失败：0;成功：1
  string code = 2; //错误码
  string msg = 3; //错误信息
  int64 id = 4; //业务数据主键
}
/*特指修改数据状态*/
enum Action{
  ALL = 0;//全部
  NEW = 1;// 新增
  UPDATE = 2;//更新
  DELETE = 3;//删除
  FETCH = 4; // 获取单条
  LIST = 5; //获取多条
  REMOVE = 9; //删除多条
}